<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="backListener"
            type="com.hattli.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/white"

                    />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/contact_us"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/signup_bg"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp">

                    <ImageView
                        android:id="@+id/icon1"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_email"
                        android:tint="@color/colorPrimary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:singleLine="true"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@id/icon1"
                        app:layout_constraintStart_toEndOf="@id/icon1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/gray4"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="@id/tv1"
                        app:layout_constraintTop_toBottomOf="@id/tv1" />


                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_phone"
                        android:tint="@color/colorPrimary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:singleLine="true"
                        android:text="@string/phone"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@id/icon2"
                        app:layout_constraintStart_toEndOf="@id/icon2"
                        app:layout_constraintTop_toTopOf="@id/icon2" />

                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/gray4"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="@id/tv2"
                        app:layout_constraintTop_toBottomOf="@id/tv2" />



                    <ImageView
                        android:id="@+id/icon3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_site"
                        android:tint="@color/colorPrimary"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPhone" />

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:singleLine="true"
                        android:text="@string/site"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@id/icon3"
                        app:layout_constraintStart_toEndOf="@id/icon3"
                        app:layout_constraintTop_toTopOf="@id/icon3" />

                    <TextView
                        android:id="@+id/tvSite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/gray4"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="@id/tv3"
                        app:layout_constraintTop_toBottomOf="@id/tv3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/send_message"
                    />

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/small_rounded_stroke_primarydark"
                    android:layout_marginTop="20dp"
                    android:singleLine="true"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:inputType="text"
                    android:hint="@string/email_or_phone"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/small_rounded_stroke_primarydark"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:inputType="textMultiLine"
                    android:hint="@string/message"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:gravity="top|start"


                    />

                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/small_rounded_btn_primary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/send"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</layout>
