<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        android:background="@drawable/login_bg"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"

            >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logo2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".1"
                />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".05"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/enter_verification_code"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/edtCode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_stroke_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".1"
                android:layout_marginTop="8dp"
                android:hint="@string/code"
                android:textColorHint="@color/white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="16sp"

                />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edtCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/consTimer"
                app:layout_constraintVertical_bias=".1"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:text="@string/confirm2"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="8dp"


                />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias=".85"
                android:layout_marginTop="8dp"
                >


                <ImageView
                    android:id="@+id/iconResend"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_message"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:id="@+id/tvResendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/resend"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iconResend"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iconResend" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
